add registro, login, pesquisa de post

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10667,3 +10667,8 @@ a.text-dark:focus {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.dropdown-my-menu {
+  position: absolute;
+  top: 60%;
+}
+
