--- a/resources/scss/theme/_header.scss
+++ b/resources/scss/theme/_header.scss
@@ -96,7 +96,7 @@ span a:hover {
 }
 
 .header-fixed {
-  position: fixed;
+ /* position: fixed;*/
   left: 0;
   top: 0;
   box-shadow: -21.213px 21.213px 30px 0px rgba(158, 158, 158, 0.3);
